# project-bec

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  config.txt  info.txt  setupBEC.sh
DaVinciDev_v36r7/Phys/HBTCorrelations/: CMakeLists.txt
DaVinciDev_v36r7/Phys/HBTCorrelations/.svn/: entries
DaVinciDev_v36r7/Phys/HBTCorrelations/cmt/: requirements
DaVinciDev_v36r7/Phys/HBTCorrelations/cmt/.svn/: entries
DaVinciDev_v36r7/Phys/HBTCorrelations/doc/.svn/: entries
DaVinciDev_v36r7/Phys/HBTCorrelations/doc/.svn/text-base/: release.notes.svn-base
DaVinciDev_v36r7/Phys/HBTCorrelations/job/: DaVinci_Ganga_MC_MC10MD.py  DaVinci_Ganga_MC_MC10MU.py  DaVinci_Ganga_Up_2011.py  HBTCorrelations_2011.py  HBTCorrelations_MC_mu.py  MINBIAS_2011_DATA_Down.py
DaVinciDev_v36r7/Phys/HBTCorrelations/job/.svn/: entries
DaVinciDev_v36r7/Phys/HBTCorrelations/job/.svn/text-base/: DaVinci_Ganga_Down_2011.py.svn-base  DaVinci_Ganga_MC_P8MD.py.svn-base  DaVinci_Ganga_MC_P8MU.py.svn-base  HBTCorrelations_MC_md.py.svn-base  minBias_MC10_Down.py.svn-base  minBias_MC10_Up.py.svn-base
DaVinciDev_v36r7/Phys/HBTCorrelations/job/myjob/: .ganga_test.py.swo  ganga_BEC.py
DaVinciDev_v36r7/Phys/HBTCorrelations/job/myjob/EPOS/: runHBTCorrelations.sh
DaVinciDev_v36r7/Phys/HBTCorrelations/options/: CloneChecker.py
DaVinciDev_v36r7/Phys/HBTCorrelations/options/.svn/: entries
DaVinciDev_v36r7/Phys/HBTCorrelations/src/: CloneChecker.cpp  CloneChecker.h  CloneCheckerTool.h  HBT.cpp  HBT.h  PVChecker.cpp  PVChecker.h
DaVinciDev_v36r7/Phys/HBTCorrelations/src/.svn/: entries
(+265 files in other folders)
